# easyrpg-libretro

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.common  Makefile.libretro  README.md
builds/libretro/: .gitignore  CMakeLists.txt  Generic.toolchain  Makefile.common  Makefile.libretro  Makefile.libretro.orig  Makefile.static  easyrpg_libretro_static.mri  merge_libs.sh  switch.cmake
builds/libretro/buildscripts/android/: 1_download_library.sh  2_build_toolchain.sh
builds/libretro/buildscripts/linux-static/: 1_download_library.sh  2_build_toolchain.sh
builds/libretro/buildscripts/mingw/: 1_download_library.sh  2_build_toolchain.sh  i686-w64-mingw32.static.cmake  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake  packages.sh  x86_64-w64-mingw32.static.cmake
builds/libretro/buildscripts/vita/: 1_download_library.sh  2_build_toolchain.sh
builds/libretro/buildscripts/wii/: 1_download_library.sh  2_build_toolchain.sh
builds/libretro/jni/: Android.mk  Application.mk  bootstrap.sh  build_native_icu.sh
builds/libretro/jni/src/: Android.mk  main.cpp
lib/liblcf/: CMakeLists.txt
libsamplerate/: float_cast.h  samplerate.c
src/: audio_decoder.cpp  audio_decoder.h  audio_libretro.cpp  audio_libretro.h  audio_libretro2.cpp  audio_libretro2.h  audio_resampler.cpp  audio_resampler.h  baseui.cpp  decoder_wav.cpp  decoder_wildmidi.cpp  filefinder.cpp  filefinder.h  image_xyz.cpp  libretro_ui.cpp  libretro_wrapper.cpp  main_data.cpp  platform.cpp  player.cpp  registry_libretro.cpp  registry_wine.cpp  scene_gamebrowser.cpp  system.h  utils.cpp
(+29 files in other folders)
